# IonStar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ELECTRICAL_WIRING.md  HARDWARE.md  HARDWARE_ASSEMBLY.md  HARDWARE_SCHEMATICS.md  MECHANICAL_ASSEMBLY.md  PARTS_LIST.md  build_hardware.md  build_software.md  parts_costs.md  power_system.md  setup_web.md  vr_control.md
hardware/: assembly_guide.md  bom.csv
hardware/schematics/: README.md
src/: __init__.py  main.py
src/communication/: vr_interface.py
src/control/: flight_controller.py
src/energy/: ambient_harvester.py
src/flight/: __init__.py  flight_controller.py
src/navigation/: navigation_controller.py
tests/: test_flight_controller.py  test_placeholder.py
