[project]
name = "ionstar"
version = "0.1.0"
description = "Autonomous, energy-harvesting drone for space and Earth flight"
authors = [
  { name="BryceWDesign", email="noreply@github.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
